--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
                 <li>
                     <a href="marlon.html">La web de Marlon</a>
                 </li>
+                <li>
+                    <a href="BlackRook311.html">La web de Diego</a>
+                </li>
             </ul>
         </nav>
     </body>
